--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
     <!-- Preconnect to fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+
+    <!-- Preload critical font weight (bold for headings) -->
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap" media="print" onload="this.media='all'" />
+
+    <!-- Load remaining weights async -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;800&display=swap" media="print" onload="this.media='all'" />
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    </noscript>
   </head>
 
   <body>
