--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/jpeg" href="/penguin-logo.jpeg" />
+    <link rel="apple-touch-icon" href="/penguin-logo.jpeg" />
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#09090B" />
