--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="/penguin-logo.jpeg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='38' stroke='%23FF8C00' stroke-width='3' fill='none'/%3E%3Ccircle cx='50' cy='50' r='22' stroke='%23FF8C00' stroke-width='2' fill='none'/%3E%3Ccircle cx='50' cy='50' r='6' fill='%23FF8C00'/%3E%3Cline x1='50' y1='8' x2='50' y2='24' stroke='%23FF8C00' stroke-width='3'/%3E%3Cline x1='50' y1='76' x2='50' y2='92' stroke='%23FF8C00' stroke-width='3'/%3E%3Cline x1='8' y1='50' x2='24' y2='50' stroke='%23FF8C00' stroke-width='3'/%3E%3Cline x1='76' y1='50' x2='92' y2='50' stroke='%23FF8C00' stroke-width='3'/%3E%3C/svg%3E" />
     <link rel="apple-touch-icon" href="/penguin-logo.jpeg" />
 
     <!-- Theme Color -->
